log/build_2024-05-16_11-09-34/doozy_forklift/stderr.log
  File "/home/avinaash/ForkLift_AMR/install/doozy_forklift/lib/python3.8/site-packages/doozy_forklift/dock_with_pallet_06.py", line 285
    break
    ^
SyntaxError: 'break' outside loop

